--- a/index.html
+++ b/index.html
@@ -1,32 +1,225 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>HTML 5 Boilerplate</title>
-        <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/styles.css">
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <body>
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <p>Column 1</p>
-                </div>
-                <div class="col">
-                    <p>Column 1</p>
-                </div>
-                <div class="col">
-                    <p>Column 1</p>
-                </div>
-            </div>
+    <link
+      rel="stylesheet"
+      href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="node_modules/bootstrap-social/bootstrap-social.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="node_modules/font-awesome/css/font-awesome.min.css" />
+      <link rel="preconnect" href="https://fonts.googleapis.com"> 
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+      <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
+      
+    <title>GoshaDraws</title>
+  </head>
+
+  <body>
+    <header class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <div class="row">
+          <div class="col-4 col-sm-3 col-md-2 align-self-center">
+            <a class="navbar-brand" href="#">
+              <img src="img/gulzadacropped.png" class="img-fluid" />
+            </a>
+          </div>
+          <div class="col my-auto">
+            <h1>GOSHADRAWS</h1>
+            <h3>
+              Custom Portrait/Illustration
+              <br />
+              Raleigh, North Carolina
+            </h3>         
         </div>
+      </div>
+    </header>
 
-        <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-        <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-	    <script src="js/script.js"></script>
-    </body>
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top">
+      <div class="container">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#goshaDrawsNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="goshaDrawsNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">HOME</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">ABOUT</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">PORTFOLIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="services.html">SERVICES</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">CONTACT</a>
+            </li>
+          </ul>
+        </div>
+        <span class="navbar-text ml-auto">
+            <a
+              class="btn btn-lg"
+              style="background-color: #A0C3D2;"
+              id="orderButton"
+              role="button"
+              href="https://www.etsy.com/shop/GoshaDraws?ref=simple-shop-header-name&listing_id=836088735">
+              ORDER
+            </a>
+        </span>
+      </div>
+    </nav>
+
+    <div class="container">
+      <!-- Carousel -->
+      <div class="row row-content">
+        <div class="col-sm-6 mx-auto">
+          <div id="homeCarousel" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#homeCarousel" data-slide-to="0" class="active"></li>
+              <li data-target="#homeCarousel" data-slide-to="1"></li>
+              <li data-target="#homeCarousel" data-slide-to="2"></li>
+              <li data-target="#homeCarousel" data-slide-to="3"></li>
+              <li data-target="#homeCarousel" data-slide-to="4"></li>
+              <li data-target="#homeCarousel" data-slide-to="5"></li>
+              <li data-target="#homeCarousel" data-slide-to="6"></li>
+              <li data-target="#homeCarousel" data-slide-to="7"></li>
+              <li data-target="#homeCarousel" data-slide-to="8"></li>
+              <li data-target="#homeCarousel" data-slide-to="9"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="img/1.jpg" alt="1" />
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/2.jpg" alt="2" />
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/3.jpg" alt="3" />
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/12.jpg" alt="3" />
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/8.jpg" alt="3" />
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/9.jpg" alt="3" />
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/16.jpeg" alt="3" />
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/15.jpeg" alt="3" />
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/10.jpg" alt="3" />
+              </div>
+            </div>
+            <a
+              class="carousel-control-prev"
+              href="#homeCarousel"
+              role="button"
+              data-slide="prev">
+              <span class="carousel-control-prev-icon"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a
+              class="carousel-control-next"
+              href="#homeCarousel"
+              role="button"
+              data-slide="next">
+              <span class="carousel-control-next-icon"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+        
+        <div class="col-2">
+          <ul class="notes">
+            <li>
+              <div class="rotate-1 pink-bg d-none d-sm-block">
+                <small>Sep 7, 2021</small>
+                <h5>Jessica Reeves</h5>
+                <p>
+                  Amazing artistry, you can see all the details beautifully and
+                  owner even worked extra quick to get it done by my anniversary
+                  it’s that kind of customer service that will bring me back !
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="rotate-2 lazur-bg d-none d-sm-block">
+                <small>Jan 24, 2022</small>
+                <h5>Sophia</h5>
+                <p>
+                  The drawing turned out perfect! She went above and beyond to
+                  make my vision come to life. I highly recommend her and would
+                  definitely order from her again.
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <footer class="site-footer">
+      <div class="container">
+        <div class="row">
+            <div class="col-5 col-sm-2 offset-1">
+                <h5>LINKS</h5>
+                <ul class="list-unstyled">
+                  <li><a href="#">HOME</a></li>
+                  <li><a href="about.html">ABOUT</a></li>
+                  <li><a href="portfolio.html">PORTFOLIO</a></li>
+                  <li><a href="services.html">SERVICES</a></li>
+                  <li><a href="contact.html">CONTACT</a></li>
+                </ul>
+              </div>
+
+          <div class="col-7 col-sm-5 text-center">
+            <h5>SOCIAL</h5>
+            <a
+              class="btn btn-social-icon btn-instagram btn-lg"
+              href="https://www.instagram.com/goshadraws/">
+              <i class="fa fa-instagram fa-lg"></i>
+            </a>
+            <a
+              class="btn btn-social-icon btn-pinterest btn-lg"
+              href="https://www.pinterest.com/goshadraws/">
+              <i class="fa fa-pinterest fa-lg"></i>
+            </a>
+            <a
+              class="btn btn-social-icon btn-etsy btn-lg"
+              href="https://www.etsy.com/shop/GoshaDraws?ref=simple-shop-header-name&listing_id=836088735">
+              <i class="fa fa-etsy fa-lg"></i>
+            </a>
+            <a
+              class="btn btn-social-icon btn-tiktok btn-lg"
+              href="http://tiktok.com/">
+              <i class="fa fa-tiktok fa-lg"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
+  </body>
 </html>
