Portfolio page, gallery carousel inside modal

--- a/contact.html
+++ b/contact.html
@@ -57,13 +57,13 @@
                   <a class="nav-link" href="index.html">HOME</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html">ABOUT</a>
-                </li>
-                <li class="nav-item">
                   <a class="nav-link" href="portfolio.html">PORTFOLIO</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="services.html">SERVICES</a>
+                  <a class="nav-link" href="interiorDesign.html">INTERIOR DESIGN</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html">ABOUT</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">CONTACT</a>
@@ -89,18 +89,18 @@
         <div class="container">
           <div class="row">
             <div class="col-5 col-sm-2 offset-1">
-              <h5>LINKS</h5>
+            
               <ul class="list-unstyled">
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="about.html">ABOUT</a></li>
                 <li><a href="portfolio.html">PORTFOLIO</a></li>
-                <li><a href="services.html">SERVICES</a></li>
+                <li><a href="interiorDesign.html">INTERIOR DESIGN</a></li>
+                <li><a href="about.html">ABOUT</a></li>
                 <li><a href="#">CONTACT</a></li>
               </ul>
             </div>
   
             <div class="col-7 col-sm-5 text-center">
-              <h5>SOCIAL</h5>
+              <h5>Follow me on:</h5>
               <a
                 class="btn btn-social-icon btn-instagram btn-lg"
                 href="https://www.instagram.com/goshadraws/">
@@ -118,7 +118,7 @@
               </a>
               <a
                 class="btn btn-social-icon btn-tiktok btn-lg"
-                href="http://tiktok.com/">
+                href="https://www.tiktok.com/@goshadraws">
                 <i class="fa fa-tiktok fa-lg"></i>
               </a>
             </div>
