--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link
       rel="stylesheet"
       href="node_modules/bootstrap-social/bootstrap-social.css" />
@@ -18,6 +19,10 @@
       <link rel="preconnect" href="https://fonts.googleapis.com"> 
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
       <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
+      <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
       
     <title>GoshaDraws</title>
   </head>
@@ -27,16 +32,14 @@
       <div class="container">
         <div class="row">
           <div class="col-4 col-sm-3 col-md-2 align-self-center">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand avatar" href="#">
               <img src="img/gulzadacropped.png" class="img-fluid" />
             </a>
           </div>
-          <div class="col my-auto">
+          <div class="col">
             <h1>GOSHADRAWS</h1>
             <h3>
               Custom Portrait/Illustration
-              <br />
-              Raleigh, North Carolina
             </h3>         
         </div>
       </div>
@@ -57,13 +60,13 @@
               <a class="nav-link" href="#">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">ABOUT</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="portfolio.html">PORTFOLIO</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services.html">SERVICES</a>
+              <a class="nav-link" href="interiorDesign.html">INTERIOR DESIGN</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">ABOUT</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">CONTACT</a>
@@ -181,18 +184,17 @@
       <div class="container">
         <div class="row">
             <div class="col-5 col-sm-2 offset-1">
-                <h5>LINKS</h5>
                 <ul class="list-unstyled">
                   <li><a href="#">HOME</a></li>
-                  <li><a href="about.html">ABOUT</a></li>
                   <li><a href="portfolio.html">PORTFOLIO</a></li>
-                  <li><a href="services.html">SERVICES</a></li>
+                  <li><a href="interiorDesign.html">INTERIOR DESIGN</a></li>
+                  <li><a href="about.html">ABOUT</a></li>
                   <li><a href="contact.html">CONTACT</a></li>
                 </ul>
               </div>
 
           <div class="col-7 col-sm-5 text-center">
-            <h5>SOCIAL</h5>
+            <h5>Follow me on:</h5>
             <a
               class="btn btn-social-icon btn-instagram btn-lg"
               href="https://www.instagram.com/goshadraws/">
@@ -204,14 +206,14 @@
               <i class="fa fa-pinterest fa-lg"></i>
             </a>
             <a
-              class="btn btn-social-icon btn-etsy btn-lg"
+              class="btn btn-social-icon btn-etsy"
               href="https://www.etsy.com/shop/GoshaDraws?ref=simple-shop-header-name&listing_id=836088735">
               <i class="fa fa-etsy fa-lg"></i>
             </a>
             <a
               class="btn btn-social-icon btn-tiktok btn-lg"
-              href="http://tiktok.com/">
-              <i class="fa fa-tiktok fa-lg"></i>
+              href="https://www.tiktok.com/@goshadraws">
+              <i class="fa fa-tiktok fa-lg"></i>Tik-Tok
             </a>
           </div>
         </div>
