--- a/portfolio.html
+++ b/portfolio.html
@@ -35,8 +35,6 @@
             <h1>GOSHADRAWS</h1>
             <h3>
               Custom Portrait/Illustration
-              <br />
-              Raleigh, North Carolina
             </h3>         
         </div>
       </div>
@@ -57,13 +55,13 @@
                   <a class="nav-link" href="index.html">HOME</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html">ABOUT</a>
-                </li>
-                <li class="nav-item">
                   <a class="nav-link" href="#">PORTFOLIO</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="services.html">SERVICES</a>
+                  <a class="nav-link" href="interiorDesign.html">INTERIOR DESIGN</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html">ABOUT</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">CONTACT</a>
@@ -83,10 +81,134 @@
       </div>
     </nav>
 
-    <!-- Carousel wrapper -->
+<!-- Portfolio gallery -->
+    <div class="row custom" id="gallery" data-toggle="modal" data-target="#portfolioModal">
+      <div class="col-12 col-sm-6 col-lg-3">
+        <img class="w-100" src="img/portfolio/gallery1.jpeg"  data-target="#carouselPortfolio" data-slide-to="0">
+      </div>
+      <div class="col-12 col-sm-6 col-lg-3">
+        <img class="w-100" src="/img/portfolio/gallery2.jpeg" data-target="#carouselPortfolio" data-slide-to="1">
+      </div>
+      <div class="col-12 col-sm-6 col-lg-3">
+        <img class="w-100" src="img/portfolio/gallery4.jpeg" data-target="#carouselPortfolio" data-slide-to="2">
+      </div>
+      <div class="col-12 col-sm-6 col-lg-3">
+        <img class="w-100" src="img/portfolio/gallery3.jpeg" data-target="#carouselPortfolio" data-slide-to="3">
+      </div>
+      <div class="col-12 col-sm-6 col-lg-3">
+        <img class="w-100" src="img/portfolio/gallery5.jpeg" data-target="#carouselPortfolio" data-slide-to="4">
+      </div>
+      <div class="col-12 col-sm-6 col-lg-3">
+        <img class="w-100" src="img/portfolio/gallery6.jpeg" data-target="#carouselPortfolio" data-slide-to="5">
+      </div>
+      <div class="col-12 col-sm-6 col-lg-3">
+        <img class="w-100" src="img/portfolio/gallery8.jpeg" data-target="#carouselPortfolio" data-slide-to="6">
+      </div>
+      <div class="col-12 col-sm-6 col-lg-3">
+        <img class="w-100" src="img/portfolio/gallery7.jpeg" data-target="#carouselPortfolio" data-slide-to="7">
+      </div>
+      <div class="col-12 col-sm-6 col-lg-3">
+        <img class="w-100" src="img/portfolio/gallery9.jpeg" data-target="#carouselPortfolio" data-slide-to="8">
+      </div>
+      <div class="col-12 col-sm-6 col-lg-3">
+        <img class="w-100" src="img/portfolio/gallery12.jpeg" data-target="#carouselPortfolio" data-slide-to="9">
+      </div>
+      <div class="col-12 col-sm-6 col-lg-3">
+        <img class="w-100" src="img/portfolio/gallery11.jpeg" data-target="#carouselPortfolio" data-slide-to="10">
+      </div>
+      <div class="col-12 col-sm-6 col-lg-3">
+        <img class="w-100" src="img/portfolio/gallery10.jpeg" data-target="#carouselPortfolio" data-slide-to="11">
+      </div>
+    </div>
+    <!-- Gallery wrapper -->
+
+    <!-- Modal -->
+<!--  Just a carousel inside a modal-->
+<div class="modal fade" id="portfolioModal" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">x</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div id="carouselPortfolio" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselPortfolio" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselPortfolio" data-slide-to="1"></li>
+            <li data-target="#carouselPortfolio" data-slide-to="2"></li>
+            <li data-target="#carouselPortfolio" data-slide-to="3"></li>
+            <li data-target="#carouselPortfolio" data-slide-to="4"></li>
+            <li data-target="#carouselPortfolio" data-slide-to="5"></li>
+            <li data-target="#carouselPortfolio" data-slide-to="6"></li>
+            <li data-target="#carouselPortfolio" data-slide-to="7"></li>
+            <li data-target="#carouselPortfolio" data-slide-to="8"></li>
+            <li data-target="#carouselPortfolio" data-slide-to="9"></li>
+            <li data-target="#carouselPortfolio" data-slide-to="10"></li>
+            <li data-target="#carouselPortfolio" data-slide-to="11"></li>            
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="img/portfolio/gallery1.jpeg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/portfolio/gallery2.jpeg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/portfolio/gallery4.jpeg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/portfolio/gallery3.jpeg" alt="Forth slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/portfolio/gallery5.jpeg" alt="Fifth slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/portfolio/gallery6.jpeg" alt="Sixth slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/portfolio/gallery8.jpeg" alt="Seventh slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/portfolio/gallery7.jpeg" alt="Eighth slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/portfolio/gallery9.jpeg" alt="Ninth slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/portfolio/gallery12.jpeg" alt="Tenth slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/portfolio/gallery11.jpeg" alt="Eleventh slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/portfolio/gallery10.jpeg" alt="Twelfth slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselPortfolio" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselPortfolio" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<hr/>
+
+    <!-- Video carousel wrapper -->
     <div class="container">
         <div class="row row-content">
-            <div class="col-sm-8 mx-auto">
+            <div class="col-sm-6 mx-auto">
                 <div id="videoCarousel" class="carousel slide carousel-fade align-self-center" data-mdb-ride="carousel">
                     <!-- Indicators -->
                     <div class="carousel-indicators">
@@ -149,25 +271,24 @@
             
         </div>
     </div>
-          <!-- Carousel wrapper -->
+          <!-- Video carousel wrapper -->
 
 
     <footer class="site-footer">
         <div class="container">
           <div class="row">
             <div class="col-5 col-sm-2 offset-1">
-                <h5>LINKS</h5>
                 <ul class="list-unstyled">
                   <li><a href="index.html">HOME</a></li>
-                  <li><a href="about.html">ABOUT</a></li>
                   <li><a href="#">PORTFOLIO</a></li>
-                  <li><a href="services.html">SERVICES</a></li>
+                  <li><a href="interiorDesign.html">INTERIOR DESIGN</a></li>
+                  <li><a href="about.html">ABOUT</a></li>
                   <li><a href="contact.html">CONTACT</a></li>
                 </ul>
               </div>
   
             <div class="col-7 col-sm-5 text-center">
-              <h5>SOCIAL</h5>
+              <h5>Follow me on:</h5>
               <a
                 class="btn btn-social-icon btn-instagram btn-lg"
                 href="https://www.instagram.com/goshadraws/">
@@ -185,7 +306,7 @@
               </a>
               <a
                 class="btn btn-social-icon btn-tiktok btn-lg"
-                href="http://tiktok.com/">
+                href="https://www.tiktok.com/@goshadraws">
                 <i class="fa fa-tiktok fa-lg"></i>
               </a>
             </div>
